--- a/.classpath
+++ b/.classpath
@@ -21,10 +21,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="Utilidades/junit-4.6.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="Utilidades/junit-4.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
