--- a/Tarea2/Servidor-Central/.classpath
+++ b/Tarea2/Servidor-Central/.classpath
@@ -6,22 +6,22 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Usuario/Downloads/jcalendar-1.4/lib/jcalendar-1.4.jar">
+	<classpathentry kind="lib" path="C:/Laboratorio/tpgr04/Tarea1/Utilidades/jcalendar-1.4.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Usuario/Downloads/jcalendar-1.4/lib/jgoodies-common-1.2.0.jar">
+	<classpathentry kind="lib" path="C:/Laboratorio/tpgr04/Tarea1/Utilidades/jgoodies-common-1.2.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Usuario/Downloads/jcalendar-1.4/lib/jgoodies-looks-2.4.1.jar">
+	<classpathentry kind="lib" path="C:/Laboratorio/tpgr04/Tarea1/Utilidades/jgoodies-looks-2.4.1.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Usuario/Downloads/jcalendar-1.4/lib/junit-4.6.jar">
+	<classpathentry kind="lib" path="C:/Laboratorio/tpgr04/Tarea1/Utilidades/junit-4.6.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
