se agregan excepciones, modificaicon en servlets

--- a/Tarea2/Servidor-Web/src/main/webapp/WEB-INF/web.xml
+++ b/Tarea2/Servidor-Web/src/main/webapp/WEB-INF/web.xml
@@ -119,4 +119,14 @@
     <servlet-name>LogoutServlet</servlet-name>
     <url-pattern>/LogoutServlet</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ConsultaUsuariosServlet</display-name>
+    <servlet-name>ConsultaUsuariosServlet</servlet-name>
+    <servlet-class>controllers.ConsultaUsuariosServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ConsultaUsuariosServlet</servlet-name>
+    <url-pattern>/ConsultaUsuariosServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
