--- a/Tarea2/Servidor-Central/.classpath
+++ b/Tarea2/Servidor-Central/.classpath
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Repositorio/tpgr04/Tarea1/Utilidades/jcalendar-1.4.jar">
+	<classpathentry exported="true" kind="lib" path="C:/Users/Valen/OneDrive - Facultad de Ingeniería/Facultad de Ingenieria/Semestre actual/Taller de Programacion/Repository/tpgr04/Tarea2/Servidor-Central/Utilidades/jcalendar-1.4.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Repositorio/tpgr04/Tarea1/Utilidades/jgoodies-common-1.2.0.jar">
+	<classpathentry exported="true" kind="lib" path="C:/Users/Valen/OneDrive - Facultad de Ingeniería/Facultad de Ingenieria/Semestre actual/Taller de Programacion/Repository/tpgr04/Tarea2/Servidor-Central/Utilidades/jgoodies-common-1.2.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Repositorio/tpgr04/Tarea1/Utilidades/jgoodies-looks-2.4.1.jar">
+	<classpathentry exported="true" kind="lib" path="C:/Users/Valen/OneDrive - Facultad de Ingeniería/Facultad de Ingenieria/Semestre actual/Taller de Programacion/Repository/tpgr04/Tarea2/Servidor-Central/Utilidades/jgoodies-looks-2.4.1.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Repositorio/tpgr04/Tarea1/Utilidades/junit-4.6.jar">
+	<classpathentry exported="true" kind="lib" path="C:/Users/Valen/OneDrive - Facultad de Ingeniería/Facultad de Ingenieria/Semestre actual/Taller de Programacion/Repository/tpgr04/Tarea2/Servidor-Central/Utilidades/junit-4.6.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
