--- a/Tarea2/Servidor-Central/.classpath
+++ b/Tarea2/Servidor-Central/.classpath
@@ -6,22 +6,22 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Repositorio/tpgr04/Tarea2/Servidor-Central/Utilidades/jcalendar-1.4.jar">
+	<classpathentry kind="lib" path="C:/Users/Valen/OneDrive - Facultad de Ingeniería/Facultad de Ingenieria/Semestre actual/Taller de Programacion/Repository/tpgr04/Tarea2/Servidor-Central/Utilidades/jcalendar-1.4.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Repositorio/tpgr04/Tarea2/Servidor-Central/Utilidades/jgoodies-common-1.2.0.jar">
+	<classpathentry kind="lib" path="C:/Users/Valen/OneDrive - Facultad de Ingeniería/Facultad de Ingenieria/Semestre actual/Taller de Programacion/Repository/tpgr04/Tarea2/Servidor-Central/Utilidades/jgoodies-common-1.2.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Repositorio/tpgr04/Tarea2/Servidor-Central/Utilidades/jgoodies-looks-2.4.1.jar">
+	<classpathentry kind="lib" path="C:/Users/Valen/OneDrive - Facultad de Ingeniería/Facultad de Ingenieria/Semestre actual/Taller de Programacion/Repository/tpgr04/Tarea2/Servidor-Central/Utilidades/jgoodies-looks-2.4.1.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Repositorio/tpgr04/Tarea2/Servidor-Central/Utilidades/junit-4.6.jar">
+	<classpathentry kind="lib" path="C:/Users/Valen/OneDrive - Facultad de Ingeniería/Facultad de Ingenieria/Semestre actual/Taller de Programacion/Repository/tpgr04/Tarea2/Servidor-Central/Utilidades/junit-4.6.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
