--- a/Tarea2/Servidor-Central/.classpath
+++ b/Tarea2/Servidor-Central/.classpath
@@ -6,26 +6,26 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Usuario/Downloads/jcalendar-1.4/lib/jcalendar-1.4.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Usuario/Downloads/jcalendar-1.4/lib/jgoodies-common-1.2.0.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Usuario/Downloads/jcalendar-1.4/lib/jgoodies-looks-2.4.1.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Usuario/Downloads/jcalendar-1.4/lib/junit-4.6.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Valen/OneDrive - Facultad de Ingeniería/Facultad de Ingenieria/Semestre actual/Taller de Programacion/Repository/tpgr04/Tarea2/Servidor-Central/Utilidades/jcalendar-1.4.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Valen/OneDrive - Facultad de Ingeniería/Facultad de Ingenieria/Semestre actual/Taller de Programacion/Repository/tpgr04/Tarea2/Servidor-Central/Utilidades/jgoodies-common-1.2.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Valen/OneDrive - Facultad de Ingeniería/Facultad de Ingenieria/Semestre actual/Taller de Programacion/Repository/tpgr04/Tarea2/Servidor-Central/Utilidades/jgoodies-looks-2.4.1.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Valen/OneDrive - Facultad de Ingeniería/Facultad de Ingenieria/Semestre actual/Taller de Programacion/Repository/tpgr04/Tarea2/Servidor-Central/Utilidades/junit-4.6.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
