--- a/Tarea2/Servidor-Central/.classpath
+++ b/Tarea2/Servidor-Central/.classpath
@@ -7,23 +7,22 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="C:/Users/Administrador/git/tpgr04/Tarea2/Servidor-Central/Utilidades/jcalendar-1.4.jar">
+	<classpathentry exported="true" kind="lib" path="Utilidades/jcalendar-1.4.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Administrador/git/tpgr04/Tarea2/Servidor-Central/Utilidades/jgoodies-common-1.2.0.jar">
+	<classpathentry exported="true" kind="lib" path="Utilidades/jgoodies-common-1.2.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Administrador/git/tpgr04/Tarea2/Servidor-Central/Utilidades/jgoodies-looks-2.4.1.jar">
+	<classpathentry exported="true" kind="lib" path="Utilidades/jgoodies-looks-2.4.1.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Administrador/git/tpgr04/Tarea2/Servidor-Central/Utilidades/junit-4.6.jar">
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
