--- a/Tarea2/Servidor-Web/.classpath
+++ b/Tarea2/Servidor-Web/.classpath
@@ -13,7 +13,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Servidor-Central">
+	<classpathentry combineaccessrules="false" kind="src" path="/SeridorCentral">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
