--- a/Tarea2/Servidor-Web/pom.xml
+++ b/Tarea2/Servidor-Web/pom.xml
@@ -22,6 +22,11 @@
 			<version>4.0.0</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+    		<groupId>com.itextpdf</groupId>
+    		<artifactId>itextpdf</artifactId>
+    		<version>5.5.13.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
