--- a/Tarea2/Servidor-Web/src/main/webapp/WEB-INF/web.xml
+++ b/Tarea2/Servidor-Web/src/main/webapp/WEB-INF/web.xml
@@ -3,5 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
-    <!-- Puedes agregar configuraciones aquí -->
+
+    <!-- Configuraciones generales de la aplicación -->
+
+    <filter>
+        <filter-name>HeadersFilter</filter-name>
+        <filter-class>controllers.HeadersFilter</filter-class> <!-- Asegúrate de que la ruta de la clase sea la correcta -->
+    </filter>
+    <filter-mapping>
+        <filter-name>HeadersFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
