--- a/Tarea2/Servidor-Web/pom.xml
+++ b/Tarea2/Servidor-Web/pom.xml
@@ -36,6 +36,7 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<finalName>Servidor-Web</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
