arreglo en el pom

--- a/Tarea2/Servidor-Central/pom.xml
+++ b/Tarea2/Servidor-Central/pom.xml
@@ -75,7 +75,7 @@
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass>presentacion.Principal</mainClass>
+							<mainClass>main.java.presentacion.Principal</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
