--- a/Tarea2/Servidor-Web/pom.xml
+++ b/Tarea2/Servidor-Web/pom.xml
@@ -49,6 +49,11 @@
 	</resources>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>3.2.3</version>
+			</plugin>
+			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>17</source>
